<resources>
    <string name="stripe_pub_key" translatable="false">pk_test_wMi9qDrafbnRQfmWEGv4etOD</string>
    <string name="kyc_file_name_template">doc_%1$s_%2$s.jpg</string>
    <string name="app_name" translatable="false">Shakti Coin</string>
    <string name="err_not_implemented">Not implemented yet</string>
    <string name="err_user_not_found">User not found</string>
    <string name="welcom_message">Welcome to Shakti Coin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_now">Create your Shakti ID now</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="common_add">Add</string>
    <string name="log_in">Log in</string>
    <string name="common_wallet">Wallet</string>
    <string name="common_vault">Vault</string>
    <string name="common_status">Status</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_apply">Apply</string>
    <string name="common_continue">Continue</string>
    <string name="and">&amp;</string>
    <string name="do_registration">Create Shakti ID</string>
    <string name="do_login"><u>Already have an account? Sign in</u></string>
    <string name="go_back_for_changes"><u>Let me go back and correct something.</u></string>
    <string name="do_send">Send</string>
    <string name="do_resend">Resend</string>
    <string name="err_loging_must_be_email">Please enter an email</string>
    <string name="err_password_invalid">Password cannot be empty and should be longer than %1$d chars</string>
    <string name="tour1_title">Create your Shakti ID.</string>
    <string name="tour1_text">Say hello to new money.</string>
    <string name="tour1_skip">Skip</string>
    <string name="tour2_title">Receive Bonus Bounty!</string>
    <string name="tour2_text">When people you invite join,\neveryone earns money.</string>
    <string name="tour3_title">Refer Friends.</string>
    <string name="tour3_text">Friends refer friends. Everyone earns money.\nLet\'s share the wealth all over the world.</string>
    <string name="hint_zero" translatable="false">0.00</string>
    <string name="hint_country">Country of Residence</string>
    <string name="hint_country_code">Country Code</string>
    <string name="hint_citizenship">Country of Citizenship</string>
    <string name="hint_state">State/Province</string>
    <string name="hint_postal_code">Zip/Postal code</string>
    <string name="hint_address1">Address Line 1</string>
    <string name="hint_address2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_select_state">Select Your State</string>
    <string name="hint_email_address">Email Address</string>
    <string name="promo_code">Promotional Code</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_phone_or_email">Phone number or email address</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_name">Name</string>
    <string name="hint_relationship">Relationship</string>
    <string name="hint_message">Message</string>
    <string name="hint_reason_to_contact">Reason to Contact</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_language">Language</string>
    <string name="education_level">Highest level of Education</string>
    <string name="occupation">Occupation</string>
    <string name="birthdate">Date of Birth</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="unlock_bounty">Unlock your Bounty Bonus today!</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="add_password_title">Add a Password</string>
    <string name="add_password_subtitle">Enter a password below.</string>
    <string name="add_password_cancel">Cancel</string>
    <string name="add_password_save">Save Password</string>
    <string name="hint_new_password">Choose your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="recovery_email_title">Password Recovery</string>
    <string name="recovery_email_subtitle">I will send a link to your email address bellow.</string>
    <string name="recovery_sent_title">Link Sent</string>
    <string name="recovery_sent_subtitle">Be sure to check spam or junkmail.</string>
    <string name="err_email_required">Please enter a valid email</string>
    <string name="err_email_code">Please enter a valid promotional code</string>
    <string name="err_phone_required">Please enter a valid phone number</string>
    <string name="err_email_phone_required">Please enter a valid email address or phone number</string>
    <string name="err_either_email_phone_required">Either email address or phone number required</string>
    <string name="err_postalCode_requird">Plese enter a valid postal code/zip</string>
    <string name="err_unexpected">Unexpected error occurred</string>
    <string name="err_incorrect_password">Your password and confirmation password do not match</string>
    <string name="err_password_not_strong">Your password must be at least 8 chars length and contain uppercase and lowercase letters, digits, and special chars. Only 2 consecutive chars allowed.</string>
    <string name="err_required">You must provide a value for this field</string>
    <string name="err_all_fields_required">All fields are required</string>
    <string name="err_email_exists">The email address is already used.</string>
    <string name="err_phone_exists">The phone number is already used.</string>
    <string name="err_email_phone_exists">Both the email and phone number are already used.</string>
    <string name="err_no_camera">This feature is not available because your device has no camera</string>
    <string name="err_no_camera_app">This feature is not available because you have no camera application installed</string>
    <string name="err_no_camera_permission">You cannot take a picture without permissions for camera</string>
    <string name="err_no_messages">You have no messages for now</string>
    <string name="err_field_mandatory">All fields are mandatory</string>
    <string name="err_field_positive_amount">Amount must be a positive value</string>
    <string name="err_field_incorrect_number">Incorrect format of the numeric value</string>
    <string name="ref_who_referred">Who referred you?</string>
    <string name="ref_story">Like an elephant, we never forget. Effort is Shakti. Always remember and reward honest human effort. Tell us who referred you.</string>
    <string name="ref_type_info">Or, type their information:</string>
    <string name="ref_scan_qr">Scan the QR Code</string>
    <string name="ref_reward">Reward your referral</string>
    <string name="ref_skip">I don\'t remember who referred me</string>
    <string name="ref_promocode_hint">Promo Code</string>
    <string name="ref_promocode_required">A promo code is required</string>
    <string name="refconfirm_story1"><b>You\'ve successfuly registered your referral.</b>\nWith your good deed, your friend is little closer to unlocking their Bonus Bounty.</string>
    <string name="refconfirm_story2"><b>Finish your Shakti ID now to claim\nyour Bonus Bounty.</b></string>
    <string name="refconfirm_title">Thank you!</string>
    <string name="take_me_to_wallet">Cool, take me to my wallet!</string>
    <string name="remember_me">Remember me</string>
    <string name="err_registration_fail">Registration cannot be completed</string>
    <string name="bonus_title">Claim your\nBonus Bounty!</string>
    <string name="bonus_subtitle">Choose your new beginning:</string>
    <string name="bonus_offer1">Special limited offer for early adopters!</string>
    <string name="bonus_offer2">Create your Shakti ID! Show Proof-of-Effort (POE), and receive an impressive bounty, valued at %1$,.2f USD!</string>
    <string name="bonus_main_action">Claim this bounty</string>
    <string name="bonus_secondary_action">View special <u>promotion details</u>.</string>
    <string name="bonus_valueof">Value of</string>
    <string name="bonus_expires">Expires on</string>
    <string name="bonus__409_claimed_already">
        You can only receive genesis bounty only one time. Good try \u2014 let\'s not be greedy.\nBy the way did you share your blessings with your loved ones?
    </string>
    <string name="bonus__410_expired">The offer is expired</string>
    <string name="dlg_confirm_email_title"><![CDATA[Confirmation<br/><font color="#D8C295"><b>Email Sent!</b></font>]]></string>
    <string name="dlg_confirm_email_text"><![CDATA[<p><b>You\'re almost there!</b></p><p>However,
        we need to make sure that there is no error and you provided us with a correct email address.
        Open the confirmation email sent to your address and click on the confirmation link.</p>
        <p>After your email is confirmed you may return and sign in using the email and the password
        you just provided us with.</p><p><b>Complete your Shakti ID now to become a part of the Shakti world!</b></p>]]>
    </string>
    <string name="dlg_confirm_email_action">Got it! Take me to sign in.</string>
    <string name="minerlic_title">Power Miner\nMover. Shaker. Digital Banker.</string>
    <string name="minerlic_choose">Choose your license type:</string>
    <string name="minerlic_one_time_payment">For a one time payment of</string>
    <string name="minerlic_action">Apply to %1$s</string>
    <string name="minerlic_action_purchased">Already Purchased</string>
    <string name="minerlic_action_upgrade">Upgrade to %1$s</string>
    <string name="minerlic_action_downgrade">Downgrade to %1$s</string>
    <string name="minerlic_package_features">%1$s Features</string>
    <string name="minerlic_features">Features</string>
    <string name="err_incorrect_card">Please enter a valid card data</string>
    <string name="err_payment_cancelled">The payment was cancelled or failed</string>
    <string name="wallet_unknown_balance" translatable="false">SXE -.--</string>
    <string name="effort_rates_chart_note">Tap the progress buttons to see the social specific leads.</string>
    <string name="effort_rates_converted">Converted</string>
    <string name="effort_rates_influenced">Influenced</string>
    <string name="effort_rates_progressing">Progressing</string>
    <string name="effort_rates_converted_accdesc">Converted leads</string>
    <string name="effort_rates_processing_accdesc">Processing leads</string>
    <string name="effort_rates_influenced_accadesc">Influenced leads</string>
    <string name="dlg_sxe_pay_title"><![CDATA[Pay with<br/><font color="#B09C75"><b>SXE</b></font>]]></string>
    <string name="dlg_sxe_pay_sendto">Send to</string>
    <string name="dlg_sxe_pay_amount">SXE amount</string>
    <string name="dlg_sxe_pay_message">Message</string>
    <string name="dlg_sxe_default_message">Transfer of personal funds</string>
    <string name="dlg_pass__hint">Enter the passphrase</string>
    <string name="dlg_pass__action">Submit</string>
    <string name="reg__email_confirmation">Thank You!\nConfirm your email address</string>
    <string name="reg__email_sent">We just sent a link to your email address.\nClick the link to confirm your email.</string>
    <string name="reg__email_resend_link"><u>Resend email confirmation link</u></string>
    <string name="reg__email_letme_go_back"><u>Let me go back and correct something</u></string>
    <string name="enter_your_passphrase">Enter your passphrase</string>
</resources>