<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcom_message"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@drawable/edit_bordered"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:imeOptions="actionDone"
            android:background="@drawable/edit_bordered"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="right|end"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:autoLink="web"
            android:linksClickable="true"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/register_now"
            android:textColor="@android:color/white"
            android:background="@drawable/button_rounded"
            android:textAllCaps="false"
            android:onClick="onLogin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingEnd="4dp"
                android:text="@string/no_account"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/register_now_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/do_registration"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:autoLink="web"
                android:linksClickable="true"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>