<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.shakticoin.app.widget.CheckableImageButton
            android:id="@+id/categoryConverted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/categoryProcessing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView57"
            app:srcCompat="@drawable/effort_converted_toggle_states"
            android:contentDescription="@string/effort_rates_converted_accdesc" />

        <com.shakticoin.app.widget.CheckableImageButton
            android:id="@+id/categoryProcessing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@+id/categoryInfluenced"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/categoryConverted"
            app:layout_constraintTop_toBottomOf="@+id/textView57"
            app:srcCompat="@drawable/effort_processing_toggle_states"
            android:contentDescription="@string/effort_rates_processing_accdesc" />

        <com.shakticoin.app.widget.CheckableImageButton
            android:id="@+id/categoryInfluenced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/categoryProcessing"
            app:layout_constraintTop_toBottomOf="@+id/textView57"
            app:srcCompat="@drawable/effort_influenced_toggle_states"
            android:contentDescription="@string/effort_rates_influenced_accadesc" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:text="@string/effort_rates_chart_note"
            android:textAppearance="@style/AppText.Body"
            android:textColor="#FFD9D9DA"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/categoryConvertedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/effort_rates_converted"
            android:textAppearance="@style/AppText.Body"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/categoryConverted"
            app:layout_constraintStart_toStartOf="@+id/categoryConverted"
            app:layout_constraintTop_toBottomOf="@+id/categoryConverted" />

        <TextView
            android:id="@+id/categoryProcessingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/effort_rates_progressing"
            android:textAppearance="@style/AppText.Body"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/categoryProcessing"
            app:layout_constraintStart_toStartOf="@+id/categoryProcessing"
            app:layout_constraintTop_toBottomOf="@+id/categoryProcessing" />

        <TextView
            android:id="@+id/categoryInfluencedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/effort_rates_influenced"
            android:textAppearance="@style/AppText.Body"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/categoryInfluenced"
            app:layout_constraintStart_toStartOf="@+id/categoryInfluenced"
            app:layout_constraintTop_toBottomOf="@+id/categoryInfluenced" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="140dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>